<resources>

    <string name="facebook_app_id">1588980934457495</string>

    <string name="app_name">Swappie</string>
    <string name="app">Swappie</string>

    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="pass_confirm">Confirma la contraseña</string>
    <string name="btn1">ENTRAR</string>
    <string name="registrarsebtn">REGISTRARSE</string>
    <string name="iniciarSesionbtn">INICIAR SESIÓN</string>

    <string name="continuar">Continuar sin registrarme</string>
    <string name="continuarEmail">Continuar con email</string>
    <string name="barra"> | </string>

    <string name="join">Inicia sesión o regístrate</string>
    <string name="iniciarSesion">Iniciar sesion</string>
    <string name="registrarse">Registrarse</string>

    <string name="registrate">¡Registrate ahora y empieza a intercambiar tus productos!</string>
    <string name="title_activity_popup">Popup</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="action_settings">Settings</string>

    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>

    <string name="salir">Cerrar sesion</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">SALTAR</string>
    <string name="start">HECHO</string>
    <string name="slide_1_title">1. Publica un articulo</string>
    <string name="slide_1_desc">Sube todos los productos que quieras.
        Si es necesario puedes añadir una pequeña descripcion</string>
    <string name="slide_2_title">2. Desliza para decidir </string>
    <string name="slide_2_desc">Desliza la imagen hacia la izquierda si no te gusta, o hacia la derecha para indicar que te interesa</string>
    <string name="slide_3_title">3. Match</string>
    <string name="slide_3_desc">En caso de que a alguien le haya interesado un producto tuyo, y a ti uno suyo, se abrirá un chat
    para que podáis llegar a un acuerdo.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_navigation_drawer">Navigation_drawer</string>

    <string name="tutorial">¿Cómo funciona Swappie?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_usuario_registrado">UsuarioRegistrado</string>
    <string name="title_activity_login">Sign in</string>
    <string name="aboutus">SOBRE NOSOTROS</string>
    <string name="contact">Contacto</string>
    <string name="cuentanos">CUÉNTANOS LO QUE PIENSAS</string>
    <string name="feedback">Envíanos tus comentarios</string>
    <string name="contact_us">CONTÁCTANOS</string>
    <string name="popup">Si tienes alguna duda, puedes enviarnos un e-mail a swappieapp2017@gmail.com</string>
    <string name="toastEmailMalo">El email no es válido</string>
    <string name="toastPassMal">Las contraseñas no coinciden</string>

    <string name="match">It\'s a match!</string>
    <string name="abrirChat">ENVIAR MENSAJE</string>
    <string name="seguir">SEGUIR JUGANDO</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to the chat -->
    <string name="keyboard_hint">Escribe tu mensaje</string>
    <string name="send_message_button">Enviar</string>

    <!-- Strings related to the camera -->
    <string name="boton_aceptar">ACEPTAR</string>
    <string name="boton_cancelar">CANCELAR</string>

    <string name="oops">Parece que no hay más imágenes para mostrar</string>
    <string name="nohaychat">Todavía no tienes ningún chat</string>
    <string name="nointernet">Parece que no tienes conexión a internet o la calidad es mala</string>

    <!-- Strings related to the object list -->
    <string name="mis_objetos">Mis objetos</string>
    <string name="borrar_objeto">Borrar objeto</string>


</resources>
