<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tutorial" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/aboutus">
            <menu>
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/contact"
                    android:title="@string/contact" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/cuentanos">
            <menu>
                <item
                    android:id="@+id/nav_help_us"
                    android:icon="@drawable/help_us"
                    android:title="@string/feedback"
                    />
            </menu>

        </item>
    </group>

</menu>