<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:weightSum="1">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/app"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/ColorActionBarTitle" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/nosesion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/linear_gradient">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="54dp"
            android:text="@string/registrate"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:gravity="center_horizontal"
            android:paddingBottom="13dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:paddingTop="13dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/loginButtonGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/loginButton"
            android:layout_alignStart="@+id/loginButton"
            android:layout_below="@+id/loginButton"
            android:layout_marginTop="34dp"
            android:gravity="center_horizontal" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="76dp"
            android:text="@string/continuarEmail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginBottom="23dp"
            android:orientation="horizontal"
            android:layout_above="@+id/textView4"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="30dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_weight="0.40"
                android:paddingLeft="20dp"
                android:text="@string/iniciarSesion"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="10dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="0.04"
                android:text="@string/barra"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="30dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_weight="0.40"
                android:paddingRight="20dp"
                android:text="@string/registrarse"
                android:clickable="true"
                android:onClick="registro"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="34dp" />
        <!-- android:clickable="true"
         android:onClick="invitado"
         android:text="@string/continuar"
         android:textColor="@color/white"
         android:textSize="16dp"-->

    </RelativeLayout>

    <RelativeLayout
     android:id="@+id/sisesion"
     android:layout_width="match_parent"
     android:layout_height="match_parent">



 </RelativeLayout>

</LinearLayout>